# paintgun

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  README.md  SIGNING.md  known_unsupported.json
.beads/: .gitignore  config.yaml  metadata.json
.github/actions/setup-paint-rust/: action.yml
.github/workflows/: ci.yml  spec-release-discovery.yml  spec-watch.yml  web-compat-watch.yml
ci/premath-snapshot/: Cargo.toml  README.md
ci/premath-snapshot/crates/premath-composability/: Cargo.toml
ci/premath-snapshot/crates/premath-composability/src/: lib.rs
ci/premath-snapshot/crates/premath-compose/: Cargo.toml
ci/premath-snapshot/crates/premath-compose/src/: lib.rs
ci/premath-snapshot/crates/premath-kcir/: Cargo.toml
ci/premath-snapshot/crates/premath-kcir-kernel/: Cargo.toml
ci/premath-snapshot/crates/premath-kcir-kernel/src/: kcir_kernel.rs  lib.rs
ci/premath-snapshot/crates/premath-kcir/src/: kcir_v2.rs  lib.rs  util.rs
ci/premath-snapshot/scripts/: workspace_ci.sh
crates/paintgun-dtcg/: Cargo.toml
crates/paintgun-emit/: Cargo.toml
crates/paintgun-emit/src/: lib.rs
crates/paintgun-ids/: Cargo.toml
crates/paintgun-policy/: Cargo.toml
crates/paintgun-policy/src/: lib.rs
crates/paintgun-resolver-kernel/: Cargo.toml
crates/paintgun-resolver-kernel/src/: lib.rs
crates/paintgun-resolver-model/: Cargo.toml
crates/paintgun-resolver-model/src/: lib.rs
crates/premath-admissibility/: Cargo.toml
crates/premath-admissibility/src/: lib.rs
crates/premath-composability/: Cargo.toml
crates/premath-composability/src/: lib.rs
crates/premath-compose/: Cargo.toml
crates/premath-compose/src/: lib.rs
crates/premath-dsl/: Cargo.toml
crates/premath-dsl/src/: lib.rs
crates/premath-gate/: Cargo.toml
crates/premath-gate/src/: lib.rs
crates/premath-kcir/: Cargo.toml
crates/premath-kcir-kernel/: Cargo.toml
crates/premath-kcir/src/kcir_v2/: compat.rs
crates/tbp-dtcg/: Cargo.toml
crates/tbp-dtcg/src/: lib.rs
crates/tbp-emit/: Cargo.toml
crates/tbp-emit/src/: lib.rs
crates/tbp-ids/: Cargo.toml
crates/tbp-ids/src/: lib.rs
crates/tbp-policy/: Cargo.toml
crates/tbp-policy/src/: lib.rs
crates/tbp-resolver-kernel/: Cargo.toml
crates/tbp-resolver-kernel/src/: lib.rs
crates/tbp-resolver-model/: Cargo.toml
crates/tbp-resolver-model/src/: lib.rs
docs/: M1_M2_execution_plan.md  alpha_release.md  backend_compatibility.md  backend_contract.md  catalog_ir.md  ci_contract.md  diagnostics_projection.md  dtcg_2025_10_review.md  editor_design_tool_seam.md  first_success_ux.md  incremental_builds.md  install.md  jj_parallel_tracks.md  live_consumer_contract.md  premath_capability_vector_status.md  premath_code_home.md  premath_extraction_contract.md  premath_standalone_prep.md  quickstart.md  releasing.md  spec_release_watch.md  spec_watch.md  target_backends.md  trust_policy.md  web_compat_watch.md  web_css_compatibility.md  web_runtime_ir.md  witness_taxonomy.md
examples/adoption-starter/: README.md  brand.resolver.json  component-contracts.json  core.resolver.json
examples/adoption-starter/sources/: foundation.tokens.json
examples/charter-steel/: charter-steel.resolver.json  component-contracts.json  policy.json
examples/compose-scale/: README.md  component-contracts.json  spec.json
examples/design-tool-bridge-prototype/: .gitignore  README.md  package.json
examples/design-tool-bridge-prototype/bridge/: index.html
examples/design-tool-bridge-prototype/scripts/: build-bridge.ts  (+1 more)
examples/native-color-edge/: native-color-edge.resolver.json
examples/perf-lattice/: component-contracts.json  perf.resolver.json
examples/quickstart/: failing.resolver.json  fixed.resolver.json
examples/vscode-diagnostics-prototype/: README.md  package.json  tsconfig.json
examples/web-runtime-prototype/: .gitignore  README.md  bunfig.toml  component-contracts.json  package.json  system.schema.json  system.web.config.json  tsconfig.json
examples/web-tokens-consumer/: README.md  package.json  tsconfig.json
perf-metrics/: context-metrics.json  context-metrics.md
schemas/: admissibility_witness.schema.json  compose.witness.schema.json  diagnostics.schema.json  report.schema.json  system.catalog.schema.json  witness.schema.json
schemas/atlas/: atlas-spec-publication.v1.schema.json
scripts/: clean_dist.sh  compose_scale_metrics.py  compose_scale_metrics_test.py  context_metrics.py  ensure_premath_projection.sh  install_paint.sh  kcir_fixture_builder.py  link_premath_checkout.sh  materialize_premath_snapshot.sh  package_release.sh  premath_workspace_ci.sh  spec_watch.py  spec_watch_test.py  test_public_install.sh
spec-watch/: discovery.json  lock.json  targets.json  web-compat.json
src/: allowlist.rs  analysis.rs  annotations.rs  artifact.rs  backend.rs  cache.rs  cert.rs  compose.rs  contexts.rs  diagnostics.rs  dtcg.rs  emit.rs  explain.rs  finding_presentation.rs  gate.rs  ids.rs  lib.rs  main.rs  pack_identity.rs  path_safety.rs  pipeline.rs  policy.rs  provenance.rs  resolver.rs  resolver_io.rs  resolver_runtime.rs  signing.rs  specpub.rs  util.rs  verify.rs  web_css.rs
src/verify/: profile_binding.rs
tests/: admissibility_boundary.rs  admissibility_witnesses.rs  adoption_example.rs  annotate_report_cli.rs  backend_contract.rs  backend_registry.rs  build_cli_errors.rs  catalog_ir_schema.rs  cli_version.rs  composability_boundary.rs  compose_boundary.rs  compose_conflict_mode.rs  compose_provenance.rs  compose_witness_schema.rs  conflict_mode.rs  conformance.rs  conformance_fixture_modes.rs  context_planning.rs  ctc_charter_steel.rs  diagnostics_cli.rs  diagnostics_projection.rs  dtcg_boundary.rs  emit_boundary.rs  explain.rs  fix_allowlist_cli.rs  gate_boundary.rs  ids_boundary.rs  incremental_cache.rs  kcir_v2_boundary.rs  kcir_v2_profile.rs  native_api_versions.rs  native_scaffold.rs  pack_identity.rs  pack_identity_pinning.rs  path_safety.rs  pipeline.rs  policy_boundary.rs  policy_strict.rs  provenance_alias_conflict.rs  provenance_defining_leaf.rs  (+24 more)
tests/archive_v1/: README.md  core_store_hash_and_bc.rs
(+498 files in other folders)
