[package]
name = "paintgun"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic build, verify, sign, and compose tooling for DTCG 2025.10 token packs"
readme = "README.md"
keywords = ["design-tokens", "dtcg", "cli", "verification"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "paint"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
premath-kcir = { path = "crates/premath-kcir" }
premath-dsl = { path = "crates/premath-dsl" }
premath-gate = { path = "crates/premath-gate" }
premath-admissibility = { path = "crates/premath-admissibility" }
premath-composability = { path = "crates/premath-composability" }
premath-compose = { path = "crates/premath-compose" }
paintgun-dtcg = { path = "crates/paintgun-dtcg" }
paintgun-policy = { path = "crates/paintgun-policy" }
paintgun-ids = { path = "crates/paintgun-ids" }
paintgun-emit = { path = "crates/paintgun-emit" }
paintgun-resolver-model = { path = "crates/paintgun-resolver-model" }
paintgun-resolver-kernel = { path = "crates/paintgun-resolver-kernel" }

[dev-dependencies]
toml = "0.8"
jsonschema = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
members = [
    ".",
    "crates/premath-kcir-kernel",
    "crates/premath-kcir",
    "crates/premath-dsl",
    "crates/premath-gate",
    "crates/premath-admissibility",
    "crates/premath-composability",
    "crates/premath-compose",
    "crates/paintgun-dtcg",
    "crates/paintgun-policy",
    "crates/paintgun-ids",
    "crates/paintgun-emit",
    "crates/paintgun-resolver-model",
    "crates/paintgun-resolver-kernel",
]
resolver = "2"
