[package]
name = "paintgun-emit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
paintgun-dtcg = { path = "../paintgun-dtcg" }
paintgun-policy = { path = "../paintgun-policy" }
