[package]
name = "premath-kcir"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
premath-kcir-kernel = { path = "../premath-kcir-kernel" }
premath-dsl = { path = "../premath-dsl" }
